--- a/Capacitação-Site/Semana2-CSS/Aula6-Fontes e Cores/fontes-cores.html
+++ b/Capacitação-Site/Semana2-CSS/Aula6-Fontes e Cores/fontes-cores.html
@@ -14,7 +14,8 @@
 			}
 			/*Links utéis: 
 			Códigos de cores html Online:
-				http://html-color-codes.info/Codigos-de-Cores-HTML/	
+				http://html-color-codes.info/Codigos-de-Cores-HTML/
+				Também tem o Paletton
 			Tipos de fontes:
 				http://www.w3schools.com/css/css_font.asp
 			Fontes seguras para utilizar em seus projetos:
